--- a/components/ContentSection.module.css
+++ b/components/ContentSection.module.css
@@ -2,11 +2,9 @@
     background-color: var(--palette-accent);
 
     margin-top: 0;
-    margin-bottom: 6.5em;
+    margin-bottom: 1em;
     position: relative;
 
-    padding-left: 3em;
-    padding-right: 1em;
 }
 
 .contentSection:before {
@@ -20,33 +18,33 @@
     transform: scaleY(-1);
 }
 
-.contentSection-inner {
+.contentSectionInner {
     padding-top: 3em;
     padding-bottom: 3em;
 }
 
-.contentSection-altFacing {
+.contentSectionAltFacing {
     flex-direction: row !important;
     text-align: left !important;
 }
 
-.contentSection-altFacing:before {
+.contentSectionAltFacing:before {
     transform: scaleX(-1);
 
 }
 
-.contentSection-altFacing:after {
+.contentSectionAltFacing:after {
     transform: scaleY(-1) scaleX(-1);
 }
 
-.contentSection-style1 {
+.contentSectionStyle1 {
     background-color: var(--palette-accent) !important;
     shape-outside: polygon(
         0px 300px 300px 300px 300px 0px
     );
 }
 
-.contentSection-style1:before {
+.contentSectionStyle1:before {
     background-repeat: no-repeat;
     background-size: 100% 100%;
     content: '';
@@ -54,11 +52,11 @@
     height: 6.5em; /* this is a var: size.wrapper-edges.large */
     position: absolute;
     width: 100%;
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%234c5c96%3B' /%3E%3C/svg%3E");
+    /* background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%234c5c96%3B' /%3E%3C/svg%3E"); */
 
 }
 
-.contentSection-style1:after {
+.contentSectionStyle1:after {
     background-repeat: no-repeat;
     background-size: 100% 100%;
     content: '';
@@ -66,15 +64,15 @@
     height: 6.5em; /* this is a var: size.wrapper-edges.large */
     position: absolute;
     width: 100%;
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%234c5c96%3B' /%3E%3C/svg%3E");
+    /* background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%234c5c96%3B' /%3E%3C/svg%3E"); */
 
 }
 
-.contentSection-style2 {
+.contentSectionStyle2 {
     background-color: #45558d;
 }
 
-.contentSection-style2:before, .contentSection-style2:after {
+.contentSectionStyle2:before, .contentSectionStyle2:after {
     background-repeat: no-repeat;
     background-size: 100% 100%;
     content: '';
@@ -82,15 +80,15 @@
     height: 6.5em; /* this is a var: size.wrapper-edges.large */
     position: absolute;
     width: 100%;
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%2345558d%3B' /%3E%3C/svg%3E");
+    /* background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%2345558d%3B' /%3E%3C/svg%3E"); */
 
 }
 
-.contentSection-style3 {
+.contentSectionStyle3 {
     background-color: #3f4e85;
 }
 
-.contentSection-style3:before, .contentSection-style3:after {
+.contentSectionStyle3:before, .contentSectionStyle3:after {
     background-repeat: no-repeat;
     background-size: 100% 100%;
     content: '';
@@ -98,11 +96,11 @@
     height: 6.5em; /* this is a var: size.wrapper-edges.large */
     position: absolute;
     width: 100%;
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%233f4e85%3B' /%3E%3C/svg%3E");
+    /* background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%233f4e85%3B' /%3E%3C/svg%3E"); */
 
 }
 
-.contentSection-inner {
+.contentSectionInner {
     margin-right: auto;
     margin-left: auto;
     width: 55em;
@@ -111,11 +109,11 @@
     text-align: right;
 }
 
-.contentSection-altFacing > .contentSection-inner {
+.contentSectionAltFacing > .contentSectionInner {
     text-align: left;
 }
 
-.contentSection-major {
+.contentSectionMajor {
     padding-bottom: 1em;
     border-bottom: 2px solid rgba(255,255,255,0.125);
 }
