--- a/components/ContentSectionList.module.css
+++ b/components/ContentSectionList.module.css
@@ -1,4 +1,4 @@
 .contentSectionList {
-    margin-top: 6em;
+    margin-top: 1em;
     
 }
