--- a/components/Footer.module.css
+++ b/components/Footer.module.css
@@ -1,6 +1,6 @@
 .mainFooter {
     background-color: rgba(53, 56, 73, 0.95);
-
+    color: white;
 }
 
 .mainFooter-container {
