--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -5,6 +5,7 @@
     transition-delay: 0s;
 
     background-color: rgba(53, 56, 73, 0.95);
+    color: white;
 
     /* height: 3.5em;
     line-height: 3.5em; */
